# prololo

./: .lohr  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: cachix.yaml  ci.yaml
examples/: config.yaml
src/: bot.rs  config.rs  main.rs  webhooks.rs
src/bot/: emoji.rs  generic.rs  github.rs  handlers.rs  message_builder.rs  mod.rs  prolosite.rs  utils.rs
src/bot/handlers/: autojoin.rs  mod.rs
src/webhooks/: generic.rs  github.rs  mod.rs  prolosite.rs
src/webhooks/github/: events.rs  signing.rs
src/webhooks/github/events/: commit_comment.rs  create.rs  fork.rs  issue_comment.rs  issues.rs  membership.rs  organization.rs  ping.rs  pull_request.rs  pull_request_review.rs  pull_request_review_comment.rs  push.rs  repository.rs  types.rs
utils/: github_payload_sender.py
