[package]
name = "prololo-reborn"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.0", features = [ "full" ] }
tracing-subscriber = "0.2"
tracing = "0.1"
url = { version = "2.2", features = [ "serde" ] }

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
branch = "fix-invite-events-emitting"
default-features = false
features = [ "native-tls" ]

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = ["cargo", "derive", "std"]
