[package]
name = "prololo"
version = "0.1.0"
authors = [ "Association Prologin <info@prologin.org>" ]
edition = "2018"
license = "MIT"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = "0.4"
hmac = "0.11"
regex = "1.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_regex = "1.1"
serde_yaml = "0.8"
sha2 = "0.9"
tokio = { version = "1.0", features = [ "full" ] }
tracing-subscriber = "0.2"
tracing = "0.1"
url = { version = "2.2", features = [ "serde" ] }

[dependencies.matrix-sdk]
version = "0.4.1"
default-features = false
features = [ "native-tls" ]

[dependencies.clap]
version = "3.0.0-beta.4"
default-features = false
features = ["cargo", "derive", "std"]

[dependencies.rocket]
version = "0.5.0-rc.1"
# don't need private-cookies
default-features = false
features = [ "json" ]
